--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
-    <title>Helping Hands</title>
+    <title>NASE Disaster Relief</title>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
